# nirioverlay

./: LICENSE  README.md
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: .default.json.kate-swp  default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/ipc/: client.rs  mod.rs  types.rs
src/lib/: app-names.js  render.js  store.js
