[package]
name = "niri-switch"
version = "0.1.0"
edition = "2021"
description = "Workspace switcher and window manager GUI for Niri compositor"
authors = []

[lib]
name = "niri_switch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "niri-switch"
path = "src/main.rs"

[dependencies]
# Tauri v2 — core + tray
tauri = { version = "2", features = ["tray-icon"] }

# Niri IPC — official types, exact version to match compositor
niri-ipc = "=25.11.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

#base32 icon
base64 = "0.22"

# Error handling
anyhow = "1"
thiserror = "2"

# IPC socket comms (for --toggle flag to signal the running daemon)
interprocess = { version = "2", features = ["tokio"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
opt-level = "s"   # optimize for size — overlay should be lean
lto = true
codegen-units = 1
panic = "abort"
strip = true
